--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Switching Techniques - Day 4 | Network Learning</title>
+    <title>Network Devices - Day 5 | Network Learning</title>
   </head>
   <body>
     <div id="root"></div>
